# CounterStrike

./: .clang-format  .gitignore  CLIENTE_DOC_TECNICO.md  CMakeLists.txt  Makefile  README.md  installer.sh
assets/maps/: map.yaml  map_2.yaml  test_map.yaml
client/: CMakeLists.txt
client/include/: app.h  cell.h  configuration.h  game._h  game.h  player.h  protocolo.h  proxy_sender.h  proxy_updater.h  stencil_creator.h  weapon_factory.h
client/include/game_io/: ammo_view.h  final_match.h  floor.h  life_view.h  modelo_io.h  money_view.h  otherplayer.h  pauser.h  player.h  renderizables.h  roundrender.h  rounds.h  score.h  shopping.h  stencil.h  weapon.h  weaponShop.h
client/include/game_io/sdl/: SdlImage.h  SdlObject.h  SdlRenderer.h  SdlSurface.h  SdlTexture.h  SdlWindow.h  initializer.h
client/include/game_io/sdl/text/: SdlFont.h  SdlText.h
client/include/game_io/sound/: music.h  sample.h
client/include/game_logic/: block.h  body.h  bomb_drop.h  bullet.h  cell.h  contact_listener.h  game.h  map.h  modelo_logic.h  player.h  server.h  weapon_drop.h  world.h
client/include/game_logic/weapons/: ak47.h  awp.h  glock.h  knife.h  m3.h  weapon.h  weapon_factory.h
client/include/game_proxy/: body_cointainer.h  body_proxy.h  final_scores.h  modelo_proxy.h  player_proxy.h  weapon_proxy.h
client/src/: app.cpp  box2d_sdl_test.cpp  configuration.cpp  game._cpp  game.cpp  main.cpp  protocolo.cpp  proxy_sender.cpp  proxy_updater.cpp  stencil_creator.cpp
client/src/game_io/: ammo_view.cpp  final_match.cpp  floor.cpp  life_view.cpp  modelo_io.cpp  money_view.cpp  otherplayer.cpp  pauser.cpp  player.cpp  renderizables.cpp  roundrender.cpp  rounds.cpp  score.cpp  shopping.cpp  stencil.cpp  weapon.cpp  weaponShop.cpp
client/src/game_io/sdl/: SdlImage.cpp  SdlObject.cpp  SdlSurface.cpp  SdlTexture.cpp  SdlWindow.cpp  initializer.cpp
client/src/game_io/sdl/text/: SdlFont.cpp  SdlText.cpp
client/src/game_io/sound/: music.cpp  sample.cpp
client/src/game_logic/: block.cpp  body.cpp  bullet.cpp  cell.cpp  contact_listener.cpp  game.cpp  glock.cpp  map.cpp  modelo_logic.cpp  player.cpp  team.cpp  weapon_factory.cpp  world.cpp
client/src/game_logic/weapons/: ak47.cpp  awp.cpp  glock.cpp  knife.cpp  m3.cpp  weapon.cpp  weapon_factory.cpp
client/src/game_proxy/: body_proxy.cpp  final_scores.cpp  modelo_proxy.cpp  player_proxy.cpp  weapon_proxy.cpp
client/src/sdl/: stencil.cpp
client/src/sound/: sample.cpp
common/include/: my_thread.h  protocolo.h  queue_monitor.h  socket.h  types.h
common/src/: my_thread.cpp  protocolo.cpp  queue_monitor.cpp  socket.cpp
config/: config.yaml
include/: prueba.h  weapon.h
include/sdl/: stencil.h
server/: CMakeLists.txt
server/include/: acceptor.h  command.h  command_queue.h  configuration.h  game.h  game_state.h  glock.h  knife.h  login.h  login_handler.h  login_queue.h  map.h  peer.h  protocolo.h  receiver.h  sender.h  server.h  state_queue.h
server/include/game_logic/: block.h  body.h  bomb.h  bullet.h  cell.h  contact_listener.h  game.h  map.h  player.h  team.h  world.h
server/include/game_logic/weapons/: ak47.h  awp.h  weapon.h
server/src/: acceptor.cpp  cell.cpp  command.cpp  command_queue.cpp  configuration.cpp  game.cpp  game_state.cpp  glock.cpp  knife.cpp  login.cpp  login_handler.cpp  login_queue.cpp  main.cpp  map.cpp  peer.cpp  player.cpp  protocolo.cpp  receiver.cpp  sender.cpp  server.cpp  state_queue.cpp  weapon.cpp  weapon_factory.cpp
server/src/game_logic/: block.cpp  body.cpp  bomb.cpp  bomb_drop.cpp  bullet.cpp  cell.cpp  game.cpp  map.cpp  modelo_logic.cpp  player.cpp  team.cpp  weapon_drop.cpp  world.cpp
server/src/game_logic/weapons/: ak47.cpp  awp.cpp  glock.cpp  knife.cpp  m3.cpp  weapon.cpp
src/: CMakeLists.txt  main.cpp  prueba.cpp
src/sdl/: CMakeLists.txt  SdlWindow.cpp  copy_to_png.cpp  copy_to_png.h  stencil.cpp
src/server/: CMakeLists.txt  cell.cpp  configuration.cpp  knife.cpp  weapon.cpp
test/: Prueba-test.cpp  configuration.cpp  map.cpp  player.cpp
